--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,12 +12,12 @@ License: https://www.wowthemes.net/freebies-license/
 }
 
 a {
-    color: #00ab6b;
+    color: #b49d65;
     transition: all 0.2s;
 }
 
 a:hover {
-    color: #038252;
+    color: #092552;
     text-decoration: none;
 }
 
@@ -209,6 +209,7 @@ section.recent-posts {
 }
 
 .toc ul {
+    color: #b49d65;
     list-style: decimal;
     font-weight: 400;
 }
@@ -337,7 +338,7 @@ span.post-read-more a:hover {
 }
 
 blockquote {
-    border-left: 4px solid #00ab6b;
+    border-left: 4px solid #b49d65;
     padding: 0 20px;
     font-style: italic;
     color: rgba(0, 0, 0, .5);
@@ -525,8 +526,8 @@ ul.tags li a:hover {
 }
 
 .btn.follow {
-    border-color: #02B875;
-    color: #1C9963;
+    border-color: #CBBB94;
+    color: #b49d65;
     padding: 3px 10px;
     text-align: center;
     border-radius: 999em;
@@ -535,8 +536,8 @@ ul.tags li a:hover {
 }
 
 .btn.subscribe {
-    background-color: #1C9963;
-    border-color: #1C9963;
+    background-color: #CBBB94;
+    border-color: #b49d65;
     color: rgba(255, 255, 255, 1);
     fill: rgba(255, 255, 255, 1);
     border-radius: 30px;
@@ -581,8 +582,8 @@ ul.tags li a:hover {
 }
 
 .alertbar input[type="submit"] {
-    background-color: #1C9963;
-    border: 1px solid #1C9963;
+    background-color: #b49d65;
+    border: 1px solid #b49d65;
     color: rgba(255, 255, 255, 1);
     fill: rgba(255, 255, 255, 1);
     font-size: 0.85rem;
@@ -687,6 +688,7 @@ h3,
 h4,
 h5,
 h6 {
+    color: #092552;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
