--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,9 +105,18 @@
 <!-- End Navigation
 ================================================== -->
 
-<div class="site-content">
+<div class="site-content" style="background: url('/assets/images/header.jpg');background-size: contain;background-repeat: no-repeat;background-color: #fbfbfb;">
 
-<div class="container">
+<!-- Site Title
+================================================== -->
+<div class="container" style="background-color: #0000004d; margin-top: 35px;">
+    <h1 class="sitetitle">{{ site.name }}</h1>
+    <p class="lead">
+        {{ site.description }}
+    </p>
+</div>
+
+<div class="container" style=" background: white; margin-top: 50px; border-radius: 10px; padding: 50px 30px 0 30px;">
 
 <!-- Content
 ================================================== -->
