--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,10 +110,17 @@
 <!-- Site Title
 ================================================== -->
 <div class="container" style="background-color: #0000004d; margin-top: 35px;">
-    <h1 class="sitetitle">{{ site.name }}</h1>
-    <p class="lead">
-        {{ site.description }}
-    </p>
+
+    <div class="row">
+        <div class="col-sm">
+            <h1 class="sitetitle">{{ site.name }}</h1>
+            <p class="lead">
+                {{ site.description }}
+            </p>        </div>
+        <div class="col-sm d-flex justify-content-end">
+            {% include google_translate.html %}
+        </div>
+    </div>
 </div>
 
 <div class="container" style=" background: white; margin-top: 50px; border-radius: 10px; padding: 50px 30px 0 30px;">
