--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -123,7 +123,7 @@
     </div>
 </div>
 
-<div class="container" style=" background: white; margin-top: 50px; border-radius: 10px; padding: 50px 30px 0 30px;">
+<div class="bg-white container shadow mt-5 rounded-top" style="padding: 50px 30px 0 30px;">
 
 <!-- Content
 ================================================== -->
