--- a/_includes/exercise-v/going-through-a-group-of-people.html
+++ b/_includes/exercise-v/going-through-a-group-of-people.html
@@ -1,3 +1,33 @@
-<h3>Going through a Group of People</h3>
+<h3 id="going-through-a-group-of-people">Going through a Group of People (10 points)</h3>
 
-<img src="https://placehold.co/600x400">
+* In V tests, the dog is on leash.
+* Your dog should be focused and willing to work throughout the exercise otherwise judge will devalue the exercise.
+* Giving extra commands will devalue the exercise.
+
+<img src="https://i.imgur.com/46GAXqT.png">
+
+{% include alert.html type="danger"
+content="If your dog shows aggression and attacks a group dog, you will be disqualified."
+%}
+
+{% include alert.html
+content="Every time you start heeling in this exercise you can give 1 command.<br>You can use either 1 verbal command or 1 visual command **but not both**."
+%}
+
+**Execution:**
+
+1. After ending the exercise on-leash Heeling, walk towards the judge and the group.
+2. Stop at the "Group starts" point (red circle in the image).
+3. Make sure the dog is in basic position when you stop.
+4. Judge tells the group to walk. Group walks counter-clockwise.
+5. Ask the judge's permission to start. Then start heeling, you should go in clockwise.
+6. Keep approximately 50cm between your dog and the group.
+7. After completing a half-circle, stop at the "Group stops" point (red square).
+8. Make sure the dog is in basic position when you stop.
+9. Judge makes the group stop.
+10. Ask the judge's permission to start. Then start heeling, you should go into the group and make a complete 8 **around the people with the dogs**.
+11. After completing the 8, stop in the middle of the group. Your dog should sit in the basic position without any command.
+12. Judge asks the group to leave and tells you to continue.
+13. You should leave the group with your dog in heeling position. Your dog will be still leashed.
+
+<hr>
