--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
 <!-- Begin Menu Navigation
 ================================================== -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top mediumnavigation nav-down">
 
     <div class="container pr-0">
 
