fix mobile view

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	</noscript>
 
+    <div id="mobileHeader"></div>
 
 <!-- Begin Menu Navigation
 ================================================== -->
@@ -105,7 +106,7 @@
 <!-- End Navigation
 ================================================== -->
 
-<div class="site-content" style="background: url('/assets/images/header.jpg');background-size: contain;background-repeat: no-repeat;background-color: #fbfbfb;">
+<div class="site-content">
 
 <!-- Site Title
 ================================================== -->
